#9 - Added sorting
