# app/Http/Controllers/ProductController.php
@@ -22,10 +22,10 @@ class ProductController extends Controller
 
     /**
      * @OA\Get(
-     * path="/api/products/",
+     * path="/api/products",
      * summary="List of products",
-     * description="Get list of produtcts",
-     * operationId="getProdutcts",
+     * description="Get all products",
+     * operationId="getProducts",
      * tags={"Products"},
      * @OA\Response(
      *    response=200,
@@ -43,7 +43,44 @@ class ProductController extends Controller
      */
     /**
      * @OA\Get(
-     * path="/api/products/{id}",
+     * path="/api/products/{sort}",
+     * summary="List of products",
+     * description="Get list of products sorted by a column of your choice (ID is the default)",
+     * operationId="getProductsSorted",
+     * tags={"Products"},
+     * @OA\Parameter(
+     *    description="Sort by a column of your choice (id, name, description, price or currency)",
+     *    in="path",
+     *    name="sort",
+     *    required=false,
+     *    example="name",
+     *    @OA\Schema(
+     *       type="string"
+     *    )
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="Success",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="id", type="number", example="1"),
+     *       @OA\Property(property="name", type="string", example="Potato"),
+     *       @OA\Property(property="description", type="string", example="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam"),
+     *       @OA\Property(property="price", type="float", example="123.45"),
+     *       @OA\Property(property="currency", type="string", example="PLN"),
+     *       )
+     *    )
+     * )
+     * )
+     */
+    public function index($sort = "id")
+    {
+        return Product::query()->orderBy($sort,"asc")->paginate(10);
+    }
+
+
+    /**
+     * @OA\Get(
+     * path="/api/products/show/{id}",
      * summary="Details of a product",
      * description="Get one of products",
      * operationId="getProduct",
@@ -73,10 +110,9 @@ class ProductController extends Controller
      * )
      * )
      */
-
-    public function index($id = null)
+    public function show($id = null)
     {
-        return $id ? Product::findOrFail($id) : Product::query()->paginate(10);
+        return Product::query()->findOrFail($id);
     }
 
     /**
